--- a/yawning_titan/notebooks/eval.ipynb
+++ b/yawning_titan/notebooks/eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "n            10.000000   20.000000   40.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "n            10.000000   20.000000   40.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "n           500.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "n           500.000000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,11 +580,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>254.316864</td>\n",
+       "      <td>-79.509003</td>\n",
+       "      <td>-57.863049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>599.000000</td>\n",
+       "      <td>-68.849998</td>\n",
+       "      <td>-43.449989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>153.899750</td>\n",
+       "      <td>-89.300003</td>\n",
+       "      <td>-71.099998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>148.915848</td>\n",
+       "      <td>3.110183</td>\n",
+       "      <td>4.454319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>trunc-mean</th>\n",
+       "      <td>184.013763</td>\n",
+       "      <td>-79.626801</td>\n",
+       "      <td>-58.048103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CI-low</th>\n",
+       "      <td>178.441215</td>\n",
+       "      <td>-79.827142</td>\n",
+       "      <td>-58.321227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CI-high</th>\n",
+       "      <td>189.586312</td>\n",
+       "      <td>-79.426459</td>\n",
+       "      <td>-57.774980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0          1          2\n",
+       "mean        254.316864 -79.509003 -57.863049\n",
+       "max         599.000000 -68.849998 -43.449989\n",
+       "min         153.899750 -89.300003 -71.099998\n",
+       "std         148.915848   3.110183   4.454319\n",
+       "trunc-mean  184.013763 -79.626801 -58.048103\n",
+       "CI-low      178.441215 -79.827142 -58.321227\n",
+       "CI-high     189.586312 -79.426459 -57.774980\n",
+       "n            10.000000  20.000000  40.000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "eval(dir='transductive')"
+    "eval(dir='transductive/')"
    ]
   }
  ],
@@ -604,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
