Finished doorman experiments

--- a/yawning_titan/notebooks/eval.ipynb
+++ b/yawning_titan/notebooks/eval.ipynb
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "def compare_one(n, dir):\n",
-    "    d_last = get_results(f'{dir}ppo_{n}N_0_last')\n",
+    "    d_last = get_results(f'{dir}dqn_{n}N_0_last')\n",
     "    #d_best = get_results(f'ppo_{n}N_0')\n",
     "\n",
     "    last_r = d_last['rewards']\n",
@@ -82,6 +82,111 @@
     "        for n in [10,20,40] + extra\n",
     "    ])\n",
     "    return pd.DataFrame(rs).transpose()#, pd.DataFrame(ls)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>442.728424</td>\n",
+       "      <td>-23.103765</td>\n",
+       "      <td>-18.027456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>599.000000</td>\n",
+       "      <td>599.000000</td>\n",
+       "      <td>599.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-95.699997</td>\n",
+       "      <td>-88.500000</td>\n",
+       "      <td>-71.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>143.926498</td>\n",
+       "      <td>146.813461</td>\n",
+       "      <td>93.543579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>trunc-mean</th>\n",
+       "      <td>472.898651</td>\n",
+       "      <td>-79.077591</td>\n",
+       "      <td>-56.525894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CI-low</th>\n",
+       "      <td>464.467513</td>\n",
+       "      <td>-79.342663</td>\n",
+       "      <td>-56.918476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CI-high</th>\n",
+       "      <td>481.329789</td>\n",
+       "      <td>-78.812519</td>\n",
+       "      <td>-56.133312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0           1           2\n",
+       "mean        442.728424  -23.103765  -18.027456\n",
+       "max         599.000000  599.000000  599.000000\n",
+       "min         -95.699997  -88.500000  -71.250000\n",
+       "std         143.926498  146.813461   93.543579\n",
+       "trunc-mean  472.898651  -79.077591  -56.525894\n",
+       "CI-low      464.467513  -79.342663  -56.918476\n",
+       "CI-high     481.329789  -78.812519  -56.133312\n",
+       "n            10.000000   20.000000   40.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(dir='doorman_gamma1/')"
    ]
   },
   {
@@ -700,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
